--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,7 +28,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/library?useSSL=false&serverTimezone=UTC
     username: "root"
-    password: "root"
+    password: "Abcd1234!"
 
   jpa:
     hibernate:
